--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box-phone {
+  width: 210px;
+  height: 545px;
+  background-color: #3E3F53;
+  margin: 20px auto 0 auto;
+  padding: 15px 20px 8px 20px;
+  border-radius: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.box-display {
+  width: 100%;
+  height: 280px;
+  border: 5px solid #B8B8B6;
+  border-radius: 15px 15px 130px 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mark {
+
 }
+
+.visor {
+  width: 100%;
+  height: 120px;
+  background-color: #78A481;
+  border-radius: 4px;
+  padding: 2px;
+}
+
+.box-buttons {
+  width: 100%;
+  height: 280px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.button-action {
+  width: 40px;
+  height: 30px;
+  margin: 15px;
+  border-radius: 5px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+
